# hisicmake

./: CMakeLists.txt  Makefile.param  README.md  rebuild-16CV300-IMX291.sh  rebuild-16EV200-IMX307.sh  rebuild-18CV200-IMX222.sh
cmake/Modules/: FindHiSiliconSDK.cmake  get_hisisdk_ver.py
common/: sample_comm_vi.c
ivp/: sample_ivp.c
tools/cmake/toolchains/: arm-himix100-linux.cmake  arm-hisiv500-linux.cmake  arm-hisiv510-linux.cmake
venc/: sample_venc.c
